# Siena3D

./: AGNfit_Hb.ipynb  AGNfit_full.ipynb  CITATION.cff  README.md  Spectroastrometry.ipynb  example.ipynb  genindex.html  index.html  py-modindex.html  searchindex.js  setup.cfg
api/: my_package.example.add_one.html
data/: logo.txt  print.py
example/: .Mrk1044_broad.fits  .Mrk1044_core_Hb.fits  .Mrk1044_core_OIII.fits  .Mrk1044_wing_OIII.fits  Mrk1044_bestfit.html  Mrk1044_broad.fits  Mrk1044_core_Hb.fits  Mrk1044_core_OIII.fits  Mrk1044_wing_OIII.fits  Untitled.ipynb  best_model_components.fits  elines.par  excl.fit  incl.cont  par_table.fits  parameters.par  runall.py
example/Input/: MockCube.fits  Mrk1044.fits
example/Output/: AGNspec.fits  AGNspec_model.html  best_model_components.fits  minicube.fits  par_table.fits
example/Output/maps/: broad.fits  core.fits  core_Hb.fits  core_OIII.fits  medium.fits  wing.fits  wing_Hb.fits  wing_OIII.fits
src/: cube.py  data.py  header.py  spectroastrometry.py
src/Siena3D/: __init__.py  astrometry.py  spectrum.py
src/Siena3D/data/: eline_rf.txt
src/siena/: __init__.py  astrometry.py  cube.py  plot.py  spectrum.py
src/siena/data/: print.py
src/siena3d/: astrometry.py  basis.py  cube.py  data.py  emission_line.py  header.py  parameters.py  plot.py  psf.py  spectrum.py
