[metadata]
name = siena
version = 0.0.1
author = Nico Winkel
author_email = winkel@mpia.de
description = Spectroastrometric analysis tool for Ionised gas Emission in Nearby AGN
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/nicowinkel/siena

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.7

# Example of how to add dependencies:
install_requires =
    importlib-metadata >= 2.0 ; python_version < "3.8"
    numpy
    scipy
    tqdm
    specutils
    matplotlib
    maoppy


[options.packages.find]
where = src

[options.extras_require]
test=
    astropy
docs=
    sphinx
