[metadata]
name = siena3d
version = 0.0.2
author = Nico Winkel
author_email = winkel@mpia.de
description = Spectroastrometric analysis tool for Ionised gas Emission in Nearby AGN
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
url = https://github.com/nicowinkel/Siena3D
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    =src
packages = find:
python_requires= >=3.7
astropy_requires == 5.0

# Example of how to add dependencies:
install_requires =
    importlib-metadata >= 2.0; python_version < "3.7"
    numpy
    scipy
    tqdm
    matplotlib
    plotly
    astropy


[options.packages.find]
where = src

[options.extras_require]
test=
    astropy
docs=
    sphinx

[options.package_data]
siena3d=
    data/*
